--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8"
   },
